--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "barryvdh/laravel-debugbar": "^3.1",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "darkaonline/l5-swagger": "5.6.*",
+        "jenssegers/agent": "^2.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
