--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
         "darkaonline/l5-swagger": "5.6.*",
-        "jenssegers/agent": "^2.6"
+        "jenssegers/agent": "^2.6",
+        "ixudra/curl": "6.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
