--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "bootstrap-sass": "^3.3.7",
+        "gulp": "^3.9.1",
+        "laravel-elixir": "^6.0.0-18",
+        "laravel-elixir-vue": "^0.1.4",
+        "laravel-elixir-webpack-official": "^1.0.2",
+        "laravel-elixir-browsersync-official": "^1.0.0",
+        "vue-resource": "^0.9.3",
+        "vue-router": "^2.0.0-rc.3"
     }
 }
