--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "darkaonline/l5-swagger": "5.6.*",
         "jenssegers/agent": "^2.6",
+        "guzzlehttp/guzzle":"6.3.0",
         "ixudra/curl": "6.*"
     },
     "require-dev": {
