--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,12 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
-        "darkaonline/l5-swagger": "5.6.*",
-        "jenssegers/agent": "^2.6",
-        "guzzlehttp/guzzle":"6.3.0",
-        "ixudra/curl": "6.*"
+        "ixudra/curl": "6.*",
+        "ext-json": "*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
