--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,26 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "barryvdh/laravel-debugbar": "^3.1",
+        "php": "^7.4.1",
+        "ext-json": "*",
         "barryvdh/laravel-ide-helper": "^2.4",
-        "ixudra/curl": "6.*",
-        "ext-json": "*"
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.4",
+        "laravel/tinker": "^2.0",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
+        "facade/ignition": "^2.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^4.1",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpstan/phpstan": "^1.3",
+        "phpunit/phpunit": "9.*",
+        "rector/rector": "^0.12.8",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "classmap": [
@@ -55,11 +60,12 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ],
+        "post-install-cmd": [
+            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
+        ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan ide-helper:generate",
-            "php artisan ide-helper:models",
-            "php artisan ide-helper:meta"
+            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ]
     },
     "config": {
